[project]
name = "t-plane"
version = "0.1.0"
description = "Visualization of a reimagined Cartesian plane with infinity at the origin"
authors = [
    {name = "Alex Moyer"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "scipy (>=1.11.0,<2.0.0)",
    "matplotlib (>=3.7.0,<4.0.0)",
    "plotly (>=5.18.0,<7.0.0)",
    "ipywidgets (>=8.1.0,<9.0.0)",
    "mypy (>=1.9.0,<2.0.0)",
    "sympy (>=1.13.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
